@@ -10,6 +10,8 @@ Format:
 - Removed/deprecated feature/method .... (user visible removed feature - passed on to release notes)
 . Any other notes ....                   (internal changes)
 
+2014-02-05 (Kenneth Geisshirt)
++ Two new targets in build.sh: get_version and set_version.
 
 2014-02-04 (Kristian Spangsege)
 + Introducing Table::get_parent_table() with allows a subtable to know its parent table.
